--- a/login/akses.html
+++ b/login/akses.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Wawan Sismadi</title>
+  <title>Dhaffa Abdillah Hakim</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -15,10 +15,10 @@
   </div>
 
   <div class="header-text">
-    <h1>Wawan Sismadi</h1>
-    <p class="subtitle">He/Him • Web Developer</p>
-    <p>Jakarta, Indonesia • <a href="https://wawan.sismadi.com">wawan.sismadi.com</a></p>
-    <p><strong>Sismadi Langit Solusi</strong> — Universitas Ahmad Dahlan</p>
+    <h1>Dhaffa Abdillah Hakim</h1>
+    <p class="subtitle">He/Him • Web and Mobile Developer Developer</p>
+    <p>Depok, Indonesia • <a href="https://dhaffaabdillah.com">dhaffaabdillah.com</a></p>
+    <p><strong>Van Aroma</strong> — Universitas IPWIJA</p>
   </div>
 
   <div class="action-buttons">
@@ -34,8 +34,8 @@
   <div class="content-card">
     <h3>Sosial Media</h3>
     <ul>
-      <li><strong>linkedin :</strong> http://linkedin.com/in/sismadi</li>
-      <li><strong>credly :</strong> https://www.credly.com/users/wawan-sismadi</li>
+      <li><strong>linkedin :</strong> http://linkedin.com/in/dhaffaabdillah</li>
+      <li><strong>credly :</strong> https://www.credly.com/users/dhaffa-abdillah-hakim</li>
     </ul>
   </div>
 </div>
