--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Wawan Sismadi</title>
+  <title>Dhaffa Abdillah Hakim</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -15,10 +15,10 @@
   </div>
 
   <div class="header-text">
-    <h1>Wawan Sismadi</h1>
-    <p class="subtitle">He/Him • Web Developer</p>
-    <p>Jakarta, Indonesia • <a href="https://wawan.sismadi.com">wawan.sismadi.com</a></p>
-    <p><strong>Sismadi Langit Solusi</strong> — Universitas Ahmad Dahlan</p>
+    <h1>Dhaffa Abdillah Hakim</h1>
+    <p class="subtitle">He/Him • Web and Mobile Developer</p>
+    <p>Jakarta, Indonesia • <a href="https://dhaffaabdillah.com">dhaffaabdillah.com</a></p>
+    <p><strong>Van Aroma</strong> — Universitas IPWIJA</p>
   </div>
 
   <div class="action-buttons">
@@ -37,8 +37,7 @@
   <div class="content-card">
     <h3>Sosial Media <small></small></h3>
     <ul>
-      <li><strong>linkedin :</strong> http://linkedin.com/in/sismadi </li>
-      <li><strong>credly :</strong> https://www.credly.com/users/wawan-sismadi</li>
+      <li><strong>linkedin :</strong> http://linkedin.com/in/dhaffaabdillah </li>
     </ul>
   </div>
 </div>
@@ -49,8 +48,8 @@
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
 
-const SUPABASE_URL = 'https://zligkbkrxqqbetnwykrq.supabase.co'
-const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InpsaWdrYmtyeHFxYmV0bnd5a3JxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDkyNjM2ODUsImV4cCI6MjA2NDgzOTY4NX0.kDK8_c6qCKKRax4HbHwEbAMwTavhDRWdgqkDtjWWYD8'
+const SUPABASE_URL = 'https://omddxywdkrqotwglmbuz.supabase.co'
+const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9tZGR4eXdka3Jxb3R3Z2xtYnV6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTA0ODg1NDMsImV4cCI6MjA2NjA2NDU0M30.IpsZVz9FLWQkZ26Dh-MMNC7eTV4zGaNDPulWfvZAQMY'
 
 
 const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
